language/move-lang/tests/move_check/parser/expr_abort_braces.exp
error: 

   ┌── tests/move_check/parsing/expr_abort_braces.move:4:15 ───
   │
 4 │         abort if (v == 0) 10 else v
   │               ^^ Unrecognized Token: if
   ·
 4 │         abort if (v == 0) 10 else v
   │               -- Expected:  "!", "&", "&mut ", "(", "()", "*", "-", "::", "abort", "break", "continue", "copy", "false", "move", "return", "true", "{", r#"0[xX][0-9a-fA-F]+"#, r#"[0-9]+"#, r#"[a-zA-Z_][a-zA-Z0-9_]*"#, r#"[a-zA-Z_][a-zA-Z0-9_]*<"#,
   │

